# NM4PDE-labs

./: CMakeLists.txt  CMakePresets.json  README.md  requirements.sh  run.sh
lab-1/: CMakeLists.txt  Poisson1D.cpp  Poisson1D.hpp  main.cpp
lab-2/: CMakeLists.txt  Poisson1D.cpp  Poisson1D.hpp  main.cpp
lab-2-ext/: CMakeLists.txt  Poisson1D-ext.cpp  Poisson1D-ext.hpp  main-ext.cpp  poisson1d-19.prm
lab-2-ext/non-smooth/: poisson1d-159.prm  poisson1d-19.prm  poisson1d-319.prm  poisson1d-39.prm  poisson1d-79.prm  poisson1d-9.prm
lab-2-ext/smooth/: poisson1d-159.prm  poisson1d-319.prm  poisson1d-39.prm  poisson1d-79.prm  poisson1d-9.prm
